// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LevelContent should render 1 active star 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <View
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <YuText
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 38,
            "lineHeight": 38,
            "textAlign": "center",
          }
        }
      >
        21
      </YuText>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/quests/completed-star.png",
            }
          }
        />
        <Image
          source={
            Object {
              "testUri": "../../../assets/quests/completed-no-star.png",
            }
          }
        />
        <Image
          source={
            Object {
              "testUri": "../../../assets/quests/completed-no-star.png",
            }
          }
        />
      </View>
    </View>
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <YuText
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 38,
              "lineHeight": 38,
              "textAlign": "center",
            }
          }
        >
          21
        </YuText>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/quests/completed-star.png",
              }
            }
          />
          <Image
            source={
              Object {
                "testUri": "../../../assets/quests/completed-no-star.png",
              }
            }
          />
          <Image
            source={
              Object {
                "testUri": "../../../assets/quests/completed-no-star.png",
              }
            }
          />
        </View>
      </View>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <YuText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 38,
                "lineHeight": 38,
                "textAlign": "center",
              }
            }
          >
            21
          </YuText>,
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/quests/completed-star.png",
                }
              }
            />
            <Image
              source={
                Object {
                  "testUri": "../../../assets/quests/completed-no-star.png",
                }
              }
            />
            <Image
              source={
                Object {
                  "testUri": "../../../assets/quests/completed-no-star.png",
                }
              }
            />
          </View>,
        ],
        "style": Object {
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": 21,
            "style": Object {
              "color": "#ffffff",
              "fontSize": 38,
              "lineHeight": 38,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": 21,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/quests/completed-star.png",
                  }
                }
              />,
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/quests/completed-no-star.png",
                  }
                }
              />,
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/quests/completed-no-star.png",
                  }
                }
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "123_0",
              "nodeType": "class",
              "props": Object {
                "source": Object {
                  "testUri": "../../../assets/quests/completed-star.png",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "123_1",
              "nodeType": "class",
              "props": Object {
                "source": Object {
                  "testUri": "../../../assets/quests/completed-no-star.png",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "123_2",
              "nodeType": "class",
              "props": Object {
                "source": Object {
                  "testUri": "../../../assets/quests/completed-no-star.png",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <View
          style={
            Object {
              "flexDirection": "column",
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 38,
                "lineHeight": 38,
                "textAlign": "center",
              }
            }
          >
            21
          </YuText>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/quests/completed-star.png",
                }
              }
            />
            <Image
              source={
                Object {
                  "testUri": "../../../assets/quests/completed-no-star.png",
                }
              }
            />
            <Image
              source={
                Object {
                  "testUri": "../../../assets/quests/completed-no-star.png",
                }
              }
            />
          </View>
        </View>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 38,
                  "lineHeight": 38,
                  "textAlign": "center",
                }
              }
            >
              21
            </YuText>,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/quests/completed-star.png",
                  }
                }
              />
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/quests/completed-no-star.png",
                  }
                }
              />
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/quests/completed-no-star.png",
                  }
                }
              />
            </View>,
          ],
          "style": Object {
            "flexDirection": "column",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 21,
              "style": Object {
                "color": "#ffffff",
                "fontSize": 38,
                "lineHeight": 38,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": 21,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/quests/completed-star.png",
                    }
                  }
                />,
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/quests/completed-no-star.png",
                    }
                  }
                />,
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/quests/completed-no-star.png",
                    }
                  }
                />,
              ],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "123_0",
                "nodeType": "class",
                "props": Object {
                  "source": Object {
                    "testUri": "../../../assets/quests/completed-star.png",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "123_1",
                "nodeType": "class",
                "props": Object {
                  "source": Object {
                    "testUri": "../../../assets/quests/completed-no-star.png",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "123_2",
                "nodeType": "class",
                "props": Object {
                  "source": Object {
                    "testUri": "../../../assets/quests/completed-no-star.png",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LevelContent should render LevelPending 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <LevelPending
      nextAvailableAt="30"
      textFill="rgb(79, 151,139)"
    />
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <LevelPending
        nextAvailableAt="30"
        textFill="rgb(79, 151,139)"
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "nextAvailableAt": "30",
        "textFill": "rgb(79, 151,139)",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <LevelPending
          nextAvailableAt="30"
          textFill="rgb(79, 151,139)"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "nextAvailableAt": "30",
          "textFill": "rgb(79, 151,139)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LevelContent should render Lock 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <Lock
      colour="rgb(79, 151, 139)"
    />
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Lock
        colour="rgb(79, 151, 139)"
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "colour": "rgb(79, 151, 139)",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Lock
          colour="rgb(79, 151, 139)"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "colour": "rgb(79, 151, 139)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LevelContent should render a chest 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <Chest
      colour="rgb(87, 133, 188)"
    />
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Chest
        colour="rgb(87, 133, 188)"
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "colour": "rgb(87, 133, 188)",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Chest
          colour="rgb(87, 133, 188)"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "colour": "rgb(87, 133, 188)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LevelContent should render a chest 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <Chest
      colour="rgb(87, 133, 188)"
    />
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Chest
        colour="rgb(87, 133, 188)"
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "colour": "rgb(87, 133, 188)",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Chest
          colour="rgb(87, 133, 188)"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "colour": "rgb(87, 133, 188)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LevelContent should render a level lock 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <Chest
      colour="rgb(79, 151, 139)"
    />
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Chest
        colour="rgb(79, 151, 139)"
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "colour": "rgb(79, 151, 139)",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Chest
          colour="rgb(79, 151, 139)"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "colour": "rgb(79, 151, 139)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LevelContent should render text 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <YuText
      bold={true}
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 38,
          "lineHeight": 38,
        }
      }
    >
      50
    </YuText>
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <YuText
        bold={true}
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 38,
            "lineHeight": 38,
          }
        }
      >
        50
      </YuText>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "bold": true,
        "children": 50,
        "style": Object {
          "color": "#ffffff",
          "fontSize": 38,
          "lineHeight": 38,
        },
      },
      "ref": null,
      "rendered": 50,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <YuText
          bold={true}
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 38,
              "lineHeight": 38,
            }
          }
        >
          50
        </YuText>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": 50,
          "style": Object {
            "color": "#ffffff",
            "fontSize": 38,
            "lineHeight": 38,
          },
        },
        "ref": null,
        "rendered": 50,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LevelContent should render text with level 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <YuText
      bold={true}
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 38,
          "lineHeight": 38,
        }
      }
    >
      2
    </YuText>
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <YuText
        bold={true}
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 38,
            "lineHeight": 38,
          }
        }
      >
        2
      </YuText>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "bold": true,
        "children": 2,
        "style": Object {
          "color": "#ffffff",
          "fontSize": 38,
          "lineHeight": 38,
        },
      },
      "ref": null,
      "rendered": 2,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <YuText
          bold={true}
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 38,
              "lineHeight": 38,
            }
          }
        >
          2
        </YuText>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": 2,
          "style": Object {
            "color": "#ffffff",
            "fontSize": 38,
            "lineHeight": 38,
          },
        },
        "ref": null,
        "rendered": 2,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
